--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "express": "^4.15.3",
     "joi": "^10.6.0",
     "libhoney": "^1.0.0-beta.10",
-    "uuid": "^3.1.0",
-    "marky-markdown": "^11.2.0",
-    "express-handlebars": "^3.0.0"
+    "uuid": "^3.1.0"
   },
   "engines": {
     "node": "8.x"
